data/derived/sp14/progs/unify/prog3674.ml.out
Characters 57-72:
  if t != [] then x + sumList (t);;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         unit
